--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-firestore:25.0.0'
     implementation 'com.google.firebase:firebase-auth:23.0.0'
+    implementation 'com.google.firebase:firebase-storage:21.0.0'
+ /*   implementation 'com.github.bumptech.glide:glide:4.16.0'*/
+// Glide dependency
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+// FirebaseUI Storage dependency
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
